// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should render correctly 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
>
  <a
    className="navbar-brand"
    href="/"
    onClick={[Function]}
  >
    Simple Calendar
  </a>
  <button
    aria-controls="navbarNav"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#navbarNav"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="navbarNav"
  >
    <ul
      className="navbar-nav ml-auto"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/"
          onClick={[Function]}
        >
          Login
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="/signup"
          onClick={[Function]}
        >
          Sign Up
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<Login /> should render correctly 1`] = `
<div
  className="container forms-container"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6 mx-auto"
        >
          <div
            className="card rounded-0"
          >
            <div
              className="card-header"
            >
              <h5
                className="mb-0"
              >
                Login
              </h5>
            </div>
            <div
              className="card-body"
            >
              <div
                className="error text-center"
              >
                
              </div>
              <form
                id="login"
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  <label>
                    Email Address
                  </label>
                  <input
                    className="form-control form-control-lg rounded-0"
                    id="email"
                    name="email"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <label>
                    Password
                  </label>
                  <input
                    className="form-control form-control-lg rounded-0"
                    id="password"
                    name="password"
                    onChange={[Function]}
                    type="password"
                    value=""
                  />
                </div>
                <button
                  className="btn btn-success btn-lg"
                  name="btn-login"
                  type="submit"
                >
                  Login
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Signup /> should render correctly 1`] = `
<div
  className="container forms-container"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
    >
      <div
        className="row"
      >
        <div
          className="col-md-6 mx-auto"
        >
          <div
            className="card rounded-0"
          >
            <div
              className="card-header"
            >
              <h5
                className="mb-0"
              >
                Sign Up
              </h5>
            </div>
            <div
              className="card-body"
            >
              <div
                className="error text-center"
              >
                
              </div>
              <form
                onSubmit={[Function]}
              >
                <div
                  className="form-group"
                >
                  <label>
                    Your Name
                  </label>
                  <input
                    className="form-control form-control-lg rounded-0"
                    id="name"
                    name="name"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <label>
                    Email Address
                  </label>
                  <input
                    className="form-control form-control-lg rounded-0"
                    id="email"
                    name="email"
                    onChange={[Function]}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <label>
                    Password
                  </label>
                  <input
                    className="form-control form-control-lg rounded-0"
                    id="password"
                    name="password"
                    onChange={[Function]}
                    type="password"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <label>
                    Confirm Password
                  </label>
                  <input
                    className="form-control form-control-lg rounded-0"
                    id="confirm"
                    name="confirm"
                    onChange={[Function]}
                    type="password"
                    value=""
                  />
                </div>
                <button
                  className="btn btn-success btn-lg"
                  name="btn-signup"
                  type="submit"
                >
                  Sign Up
                </button>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
